[gd_scene load_steps=21 format=3 uid="uid://bh6juqooq77vm"]

[ext_resource type="Script" path="res://Scripts/boss_rusher.gd" id="1_jli4x"]
[ext_resource type="Texture2D" uid="uid://cswkrb5hu48r8" path="res://Art/Sprites/Enemies/boss sergeant.png" id="2_fc1es"]
[ext_resource type="Script" path="res://Scripts/enemy_health.gd" id="3_frah2"]
[ext_resource type="PackedScene" uid="uid://bb6l6e5xtb17k" path="res://Scenes/Particles/shadow.tscn" id="4_4st6s"]
[ext_resource type="PackedScene" uid="uid://84xxip1wf4vx" path="res://Scenes/UI/minimap_icon.tscn" id="5_3icve"]
[ext_resource type="Texture2D" uid="uid://5tfn2k4jut0o" path="res://Art/Sprites/boss icon.png" id="6_m32f4"]
[ext_resource type="PackedScene" uid="uid://pkl1jd6tt0bd" path="res://Scenes/UI/arrow.tscn" id="7_o0yth"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ejw31"]
atlas = ExtResource("2_fc1es")
region = Rect2(0, 0, 54, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_yu5yr"]
atlas = ExtResource("2_fc1es")
region = Rect2(54, 0, 54, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_n13k3"]
atlas = ExtResource("2_fc1es")
region = Rect2(108, 0, 54, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_38a13"]
atlas = ExtResource("2_fc1es")
region = Rect2(162, 0, 54, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hury"]
atlas = ExtResource("2_fc1es")
region = Rect2(216, 0, 54, 52)

[sub_resource type="SpriteFrames" id="SpriteFrames_1n5n1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejw31")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yu5yr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n13k3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_38a13")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hury")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_hr8qo"]
radius = 22.0057

[sub_resource type="CircleShape2D" id="CircleShape2D_yi1dk"]
radius = 23.5053

[sub_resource type="CircleShape2D" id="CircleShape2D_ijydg"]
radius = 25.02

[sub_resource type="GDScript" id="GDScript_yvhgh"]
script/source = "extends Node2D

@export var sprite: Texture2D
@export var follow: bool
var icon: Node2D


func _ready():
	call_deferred(\"add_to_minimap\")


func add_to_minimap():
	var minimap = Globals.ui.get_node(\"Minimap\")
	var follow_obj
	if follow:
		follow_obj = get_parent()
	else:
		follow_obj = null
	icon = minimap.add_to_map(sprite, global_position, follow_obj)


func _exit_tree():
	icon.queue_free()
"

[sub_resource type="Animation" id="Animation_p5rbh"]
length = 0.001

[sub_resource type="Animation" id="Animation_bk3vg"]
resource_name = "walk"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_28m1k"]
_data = {
"RESET": SubResource("Animation_p5rbh"),
"walk": SubResource("Animation_bk3vg")
}

[node name="Boss" type="CharacterBody2D" groups=["enemy"]]
use_parent_material = true
collision_layer = 0
collision_mask = 257
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_jli4x")
boss_name = "Ace, Rider of darkness"
speed = 20.0
damage = 25.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
use_parent_material = true
sprite_frames = SubResource("SpriteFrames_1n5n1")
autoplay = "default"
frame = 1
frame_progress = 0.830628
offset = Vector2(0, -20)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -18)
shape = SubResource("CircleShape2D_hr8qo")

[node name="Hitbox" type="Area2D" parent="." groups=["enemy"]]
y_sort_enabled = true
position = Vector2(3, -15)
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-3, -3)
shape = SubResource("CircleShape2D_yi1dk")

[node name="Hurtbox" type="Area2D" parent="." node_paths=PackedStringArray("sprite") groups=["enemy"]]
y_sort_enabled = true
position = Vector2(0, -20)
collision_layer = 8
collision_mask = 2
script = ExtResource("3_frah2")
health = 250
rotate_on_hit = false
sprite = NodePath("../AnimatedSprite2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_ijydg")

[node name="Shadow" parent="." instance=ExtResource("4_4st6s")]
position = Vector2(0, 4)
scale = Vector2(1, 0.2)
radius = 25

[node name="MinimapIcon" parent="." instance=ExtResource("5_3icve")]
script = SubResource("GDScript_yvhgh")
sprite = ExtResource("6_m32f4")
follow = true

[node name="Arrow" parent="." instance=ExtResource("7_o0yth")]
visible = false

[node name="RunTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="RunCooldown" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_28m1k")
}

[connection signal="timeout" from="RunTimer" to="." method="_on_run_timer_timeout"]
